--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,14 @@
 <html>
 	<head>
 		<title>Student Bio</title>
+		<style>
+			h1{
+				background-color:black;
+				color:white;
+				text-align:center;
+				padding:10px;
+			}
+		</style>
 	</head>
 	<body>
 		<header>
@@ -10,7 +18,7 @@
 		<h2>Conor Mullen</h2>
 		<br>
 		<img src="http://placehold.it/200x200" alt="Me" height="200" width="200">
-		<p>Hi. My name is Conor Mullen. This is my own placeholder text. Normally, this would be several sentences describing myself.</p>
+		<p>Hi. My name is Conor Mullen. This is my own placeholder text. Normally, this would consist of several sentences describing myself.</p>
 		<h2>Contact Info</h2>
 		<ul>
 			<li><strong>Email: </strong><a href="#">conorseamus@gmail.com</a></li>
